# microservices

./: .env  main.py  pyproject.toml
backend/: models.py
backend/services/: bot_avatar_updation.py  server_icon_updation.py
backend/utility/: api_client.py
